@@ -406,7 +406,8 @@ public class TransformFrameEncodeApplyTest extends AutomatedTestBase {
 			
 			if( rt == ExecMode.HYBRID ) {
 				Assert.assertEquals("Wrong number of executed Spark instructions: " +
-					Statistics.getNoOfExecutedSPInst(), new Long(0), new Long(Statistics.getNoOfExecutedSPInst()));
+					Statistics.getNoOfExecutedSPInst(), Long.valueOf(0),
+					Long.valueOf(Statistics.getNoOfExecutedSPInst()));
 			}
 			
 			//additional checks for binning as encode-decode impossible
